--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Pulse meter shop",
   "main": "index.html",
   "scripts": {
-    "prefix": "postcss --use autoprefixer -b 'last 10 versions' css/style.css -o css/style.css",
-    "compress": "node-sass css/style.css css/style.css --output-style compressed",
-    "build": "npm-run-all prefix compress",
-    "server": "http-server -o",
-    "compile": "node-sass sass/style.scss css/style.css -w",
-    "dev": "concurrently --kill-others \"npm run server\" \"npm run compile\""
+    "scss:prefix": "postcss --use autoprefixer -b 'last 10 versions' css/style.css -o css/style.css",
+    "scss:compress": "node-sass css/style.css css/style.css --output-style compressed",
+    "build": "npm-run-all scss:prefix scss:compress",
+    "scss:compile": "node-sass sass/style.scss css/style.css",
+    "scss:watch": "nodemon -e scss -x \"npm run scss:compile\"",
+    "dev": "npm-run-all --parallel server scss:watch",
+    "server": "browser-sync start --server -w index.html"
   },
   "repository": {
     "type": "git",
@@ -20,9 +21,9 @@
   "homepage": "https://github.com/mux-mux/pulse#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.14",
-    "concurrently": "^8.2.0",
-    "http-server": "^14.1.1",
+    "browser-sync": "^2.29.3",
     "node-sass": "^8.0.0",
+    "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.1.0"
   }
